src/objects/CadenceAction__c.object
<CustomObject>
    <fields>
        <fullName>Action_Criteria_PE__c</fullName>
        <label>Action Criteria PE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_Criterion__c</fullName>
        <label>Action Criterion</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Action_Id__c</fullName>
        <label>Action Id</label>
        <referenceTo>Action__c</referenceTo>
        <relationshipName>CadenceActions</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Cadence_Id__c</fullName>
        <label>Sequence Id</label>
        <referenceTo>Cadence__c</referenceTo>
        <relationshipName>CadenceActions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Day__c</fullName>
        <label>Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Fields_To_Update_Action__c</fullName>
        <description>It would keep the information of field to update in JSON format.</description>
        <label>Fields To Update Action</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hour__c</fullName>
        <label>Hour</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <description>Index for sequence Action Detail page.</description>
        <label>Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority_number__c</fullName>
        <label>Priority_number</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trigger_Type__c</fullName>
        <label>Trigger Type</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Time Based</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Days</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hours</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>SequenceAction</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Trigger_Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SequenceActions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>